@@ -4,6 +4,6 @@
 .*: +file format .*
 
 Contents of section .eh_frame:
- 0+000 10000000 00000000 017a0001 781a0004 .*
- 0+010 01000000 12000000 18000000 00000000 .*
- 0+020 08000000 04080000 0044 .*
+ 0+000 (10|00)0000(00|10) 00000000 017a0001 781a0004 .*
+ 0+010 (01|00)0000(00|01) (12|00)0000(00|12) (18|00)0000(00|18) 00000000 .*
+ 0+020 (08|00)0000(00|08) 04(08|00)0000 (00|08)44 .*
